# cons-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  bench.sh
.github/workflows/: rust.yml
bencher/: Cargo.toml
bencher/benches/: bench.rs
bencher/src/: main.rs
benches/: bench.rs
src/: immutable.rs  iter.rs  lib.rs
