[package]
name = "cons-rs"
version = "0.7.0"
edition = "2021"
description = "A crate containing a Cons data structure."
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/**",
]
repository = "https://github.com/cod10129/cons-rs"
license = "MIT"
categories = ["data-structures", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
immutable = []

[dependencies]
